# adventure

./: .clang-format  CMakeLists.txt  Doxyfile.in  NOTICE  README.md  run-clang-format.sh
.github/workflows/: ci-linux.yml
benchmarks/: CMakeLists.txt  benchmark_ad.cpp
cmake/: adventureConfig.cmake.in
include/adventure/: config.hpp  dynamic_array.hpp  expr.hpp  ops.hpp  tape.hpp  variable.hpp
tests/: CMakeLists.txt  test_ad.cpp  test_assignment.cpp  test_constant_inactive.cpp  test_custom_node.cpp  test_dynamic_array.cpp  test_exception_safety.cpp  test_multiple_expressions.cpp  test_ops.cpp  test_parent_count.cpp  test_thread_isolation.cpp  test_variable_constructors.cpp  test_zero_derivative_pruning.cpp
